Fixed slight css styling issue with searchbox, (text overflows onto navbar), needs to be looked into in the future

--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -36,6 +36,10 @@
     }
 }
 
+.search {
+    z-index: -1;
+}
+
 .blog-header {
     display: flex;
     flex-direction: row;
